initial implementation of issuer configs
